# friends-connect

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  set-env-vars.bat  setup-env.bat  vcpkg.json
.cargo/: config.tomal
.github/workflows/: deploy.yml
docs/: progress.md
examples/: connect.htm  create_connection.rs  test_deployed.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/leptos_hello/: Cargo.toml
examples/leptos_hello/src/: lib.rs
examples/web-demo/: Cargo.toml
examples/web-demo/src/: main.rs
examples/web-demo/src/static/: index.html
k8s/base/: acme-solver-ingress.yaml  certificate-issuer-patch.yaml  cluster-issuer.yaml  deployment.yaml  ingress.yaml  service.yaml  services.yaml  test-ingress.yaml
k8s/test/: test_manifests.sh
src/: connection.rs  error.rs  lib.rs  main.rs  memory.rs  models.rs  server.rs  validation.rs  websocket.rs
verify/: player1.bat  player1.sh  player2.bat  player2.sh
