[package]
name = "friends-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.2"
actix-files = "0.6.2"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rdkafka = { version = "0.30", features = ["ssl-vendored", "cmake-build"] }
dotenv = "0.15" 

[[example]]
name = "create_connection"
path = "examples/create_connection.rs"

[dev-dependencies]
actix-rt = "2.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }


[dependencies.sasl2-sys]
version = "0.1"
features = ["vendored"]

[build-dependencies]
cmake = "0.1"

# Define environment variables for build
[package.metadata.env]
VCPKGRS_DYNAMIC = "1"
OPENSSL_NO_VENDOR = "1"
SASL2_STATIC = "0"