[package]
name = "leptos_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.4", features = ["csr","nightly"] }
wasm-bindgen-test = "0.3"
log = "0.4"
wasm-logger = "0.2"
uuid = { version = "1.7", features = ["v4"] }
web-sys = { version = "0.3", features = ["Storage", "Window"] }
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
