[package]
name = "friends-connect-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
friends-connect = { path = "../.." }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
ring = "0.17"
base64 = "0.21"